--- a/.env-example
+++ b/.env-example
@@ -3,3 +3,9 @@ GOTCHA_ENV=prod # accepts dev or prod, defaults to prod
 
 # API Configuration
 GOTCHA_API_PORT=8080
+
+# Database Configuration
+GOTCHA_DB_USER=admin
+GOTCHA_DB_PASS=admin
+GOTCHA_DB_NAMESPACE=gotcha
+GOTCHA_DB_DATABASE=gotcha
