refactored into cinnanym, maybe a cool new project

--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,11 @@
 # App Configuration
-GOTCHA_ENV=prod # accepts dev or prod, defaults to prod
+ENVIRONMENT=prod # accepts dev or prod, defaults to prod
 
 # API Configuration
-GOTCHA_API_PORT=8080
+SERVER_API_PORT=8080
 
 # Database Configuration
-GOTCHA_DB_USER=admin
-GOTCHA_DB_PASS=admin
-GOTCHA_DB_NAMESPACE=gotcha
-GOTCHA_DB_DATABASE=gotcha
+DB_USER=admin
+DB_PASS=admin
+DB_NAMESPACE=my_namespace
+DB_DATABASE=my_database
